--- a/MacBrowserChooser/Base.lproj/Main.storyboard
+++ b/MacBrowserChooser/Base.lproj/Main.storyboard
@@ -763,10 +763,26 @@
         <!--Rules-->
         <scene sceneID="f87-jo-x2e">
             <objects>
-                <viewController title="Rules" id="ZNW-Pc-SLp" sceneMemberID="viewController">
+                <viewController title="Rules" id="ZNW-Pc-SLp" customClass="RulesVC" customModule="MacBrowserChooser" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="ssk-zJ-QHN">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SUQ-ZL-Qx4">
+                                <rect key="frame" x="14" y="13" width="49" height="32"/>
+                                <buttonCell key="cell" type="push" title="+" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Vmf-hX-rl9">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="clickedAddButton:" target="ZNW-Pc-SLp" id="PCe-cF-wWY"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="SUQ-ZL-Qx4" firstAttribute="leading" secondItem="ssk-zJ-QHN" secondAttribute="leading" constant="20" id="Mle-tp-zqV"/>
+                            <constraint firstAttribute="bottom" secondItem="SUQ-ZL-Qx4" secondAttribute="bottom" constant="20" id="fZT-RX-hKY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="pa9-r3-Abh" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
